# JokerNet

./: .env.example  .gitattributes  .gitignore  CONTROLLER_GUIDE.md  Dockerfile  README.md  VIRTUAL_CONTROLLER.md  agent.ipynb  docker-compose.yml  pyproject.toml  requirements.txt  startup.sh  test_mcp.ipynb
BalatroDocker/: Dockerfile  README.md  docker-compose.yml  requirements.txt
BalatroDocker/BalatroLogger/: BalatroLogger.json  auto_start.lua
BalatroDocker/config/: nginx.conf  novnc.env  paths.env  supervisord.conf
BalatroDocker/data/save_state/balatro-love/: settings.jkr
BalatroDocker/data/save_state/balatro-love/1/: meta.jkr  save.jkr
BalatroDocker/data/save_state/balatro-love/config/: Saturn.jkr
BalatroDocker/scripts/: setup_love.sh  setup_novnc.sh  startup.sh
BalatroDocker/src/: api.py  api_main.py  main.py  mcp_main.py  mcp_server.py  streamlit_app.py
BalatroDocker/src/api/: __init__.py  config.py  system.py
BalatroDocker/src/api/controllers/: __init__.py  game_controller.py  gamepad_controller.py  mouse_controller.py  screenshot_controller.py
BalatroDocker/src/api/models/: requests.py
BalatroDocker/src/api/utils/: __init__.py  config.py  gamepad_controller.py  image_processing.py
BalatroDocker/src/mcp_server/: __init__.py  gamepad_mcp.py  mouse_mcp.py
BalatroDocker/src/mcp_server/tools/: __init__.py  gamepad_tools.py  mouse_tools.py
BalatroLogger/: BalatroLogger.json  auto_start.lua  main.lua
api/: main.py
config/: supervisord.conf
data/save_state/balatro-love/: settings.jkr
data/save_state/balatro-love/1/: profile.jkr  save.jkr
notebooks/: agent.ipynb  agent_gamepad.ipynb  agent_mouse.ipynb  app.py  mouse.ipynb  mouse_mcp.ipynb  test_mcp.ipynb
prompts/: agent_prompt.txt  general.jinja  general_prompt.txt  summary.jinja
prompts/controls/: gamepad.jinja  mouse.jinja  mouse_keyboard.jinja
scripts/: config_utils.sh  setup_all.sh  setup_love.sh  startup.sh
src/: agent.py  api.py  app.py  mcp_server.py  streamlit_app.py
src/agents/: __init__.py  open_source.py  openai.py  planner.py  prompts.py  utils.py  worker.py
src/agents/models/: __init__.py  agent.py  planner.py  visualizer.py
src/ui_components/: __init__.py  agent.py  chat.py  config.py  gamepad_controller.py  utils.py
